--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "0                 80.39%  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "Wilson High School                  95.20%  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "Ford High School                      73.80%  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "Griffin High School   82.04  84.23  83.84  83.36"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "Griffin High School   83.37  83.71  84.29  84.01"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1022,35 +1022,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>&lt;$585</td>\n",
-       "      <td>83.36</td>\n",
-       "      <td>83.96</td>\n",
-       "      <td>93.70%</td>\n",
-       "      <td>96.69%</td>\n",
-       "      <td>95.19%</td>\n",
+       "      <td>83.46</td>\n",
+       "      <td>83.93</td>\n",
+       "      <td>93.46%</td>\n",
+       "      <td>96.61%</td>\n",
+       "      <td>95.04%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>$585-615</td>\n",
-       "      <td>83.53</td>\n",
-       "      <td>83.84</td>\n",
-       "      <td>94.12%</td>\n",
-       "      <td>95.89%</td>\n",
-       "      <td>95.01%</td>\n",
+       "      <td>83.60</td>\n",
+       "      <td>83.89</td>\n",
+       "      <td>94.23%</td>\n",
+       "      <td>95.90%</td>\n",
+       "      <td>95.07%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>$615-645</td>\n",
-       "      <td>78.06</td>\n",
-       "      <td>81.43</td>\n",
-       "      <td>71.40%</td>\n",
-       "      <td>83.61%</td>\n",
-       "      <td>77.51%</td>\n",
+       "      <td>79.08</td>\n",
+       "      <td>81.89</td>\n",
+       "      <td>75.67%</td>\n",
+       "      <td>86.11%</td>\n",
+       "      <td>80.89%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>$645-675</td>\n",
-       "      <td>77.05</td>\n",
-       "      <td>81.01</td>\n",
-       "      <td>66.23%</td>\n",
-       "      <td>81.11%</td>\n",
-       "      <td>73.67%</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>81.03</td>\n",
+       "      <td>66.16%</td>\n",
+       "      <td>81.13%</td>\n",
+       "      <td>73.65%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1059,55 +1059,49 @@
       "text/plain": [
        "                          Average Math Score Average Reading Score  \\\n",
        "Binned Per Student Budget                                            \n",
-       "<$585                                  83.36                 83.96   \n",
-       "$585-615                               83.53                 83.84   \n",
-       "$615-645                               78.06                 81.43   \n",
-       "$645-675                               77.05                 81.01   \n",
+       "<$585                                  83.46                 83.93   \n",
+       "$585-615                               83.60                 83.89   \n",
+       "$615-645                               79.08                 81.89   \n",
+       "$645-675                               77.00                 81.03   \n",
        "\n",
        "                          % Passing Math % Passing Reading  \\\n",
        "Binned Per Student Budget                                    \n",
-       "<$585                             93.70%            96.69%   \n",
-       "$585-615                          94.12%            95.89%   \n",
-       "$615-645                          71.40%            83.61%   \n",
-       "$645-675                          66.23%            81.11%   \n",
+       "<$585                             93.46%            96.61%   \n",
+       "$585-615                          94.23%            95.90%   \n",
+       "$615-645                          75.67%            86.11%   \n",
+       "$645-675                          66.16%            81.13%   \n",
        "\n",
        "                          % Overall Passing Rate  \n",
        "Binned Per Student Budget                         \n",
-       "<$585                                     95.19%  \n",
-       "$585-615                                  95.01%  \n",
-       "$615-645                                  77.51%  \n",
-       "$645-675                                  73.67%  "
+       "<$585                                     95.04%  \n",
+       "$585-615                                  95.07%  \n",
+       "$615-645                                  80.89%  \n",
+       "$645-675                                  73.65%  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "groupedSchools[\"Binned Per Student Budget\"] = pd.cut(groupedSchools[\"Per Student Budget\"],spending_bins, labels=group_names)\n",
-    "perStudentBudget = groupedSchools[\"Binned Per Student Budget\"]\n",
-    "perStudentBudget = perStudentBudget.reset_index()\n",
     "\n",
-    "school_data_complete_with_bins = pd.merge(school_data_complete,perStudentBudget,on=\"school_name\",how=\"left\")\n",
-    "\n",
-    "groupedPerStudentBudget = school_data_complete_with_bins.groupby(\"Binned Per Student Budget\")\n",
-    "\n",
-    "scoresBySchoolSpending = pd.DataFrame({\"Average Math Score\":groupedPerStudentBudget[\"math_score\"].sum() / groupedPerStudentBudget[\"math_score\"].count(),\n",
-    "                                       \"Average Reading Score\":groupedPerStudentBudget[\"reading_score\"].sum() / groupedPerStudentBudget[\"reading_score\"].count()\n",
-    "                                       })\n",
-    "\n",
-    "scoresBySchoolSpending[\"% Passing Math\"] = groupedPerStudentBudget[\"Passing Math\"].sum() / groupedPerStudentBudget[\"Student ID\"].count()\n",
-    "scoresBySchoolSpending[\"% Passing Reading\"] = groupedPerStudentBudget[\"Passing Reading\"].sum() / groupedPerStudentBudget[\"Student ID\"].count()\n",
-    "scoresBySchoolSpending[\"% Overall Passing Rate\"] = (scoresBySchoolSpending[\"% Passing Math\"] + scoresBySchoolSpending[\"% Passing Reading\"]) / 2\n",
-    "\n",
+    "groupedBySpendingBins = groupedSchools.groupby(\"Binned Per Student Budget\")\n",
+    "scoresBySchoolSpending= pd.DataFrame({\"Average Math Score\":groupedBySpendingBins[\"Average Math Score\"].sum() / groupedBySpendingBins[\"Average Math Score\"].count(),\n",
+    "                                     \"Average Reading Score\":groupedBySpendingBins[\"Average Reading Score\"].sum() / groupedBySpendingBins[\"Average Reading Score\"].count(),\n",
+    "                                     \"% Passing Math\":groupedBySpendingBins[\"% Passing Math\"].sum() / groupedBySpendingBins[\"% Passing Math\"].count(),\n",
+    "                                     \"% Passing Reading\":groupedBySpendingBins[\"% Passing Reading\"].sum() / groupedBySpendingBins[\"% Passing Reading\"].count(),\n",
+    "                                     \"% Overall Passing Rate\":groupedBySpendingBins[\"% Overall Passing Rate\"].sum() / groupedBySpendingBins[\"% Overall Passing Rate\"].count()\n",
+    "                    })\n",
+    "scoresBySchoolSpending\n",
     "scoresBySchoolSpendingFmtd = scoresBySchoolSpending\n",
     "scoresBySchoolSpendingFmtd[\"Average Math Score\"] = scoresBySchoolSpendingFmtd[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
     "scoresBySchoolSpendingFmtd[\"Average Reading Score\"] = scoresBySchoolSpendingFmtd[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
     "scoresBySchoolSpendingFmtd[\"% Passing Math\"] = scoresBySchoolSpendingFmtd[\"% Passing Math\"].map(\"{:.2%}\".format)\n",
     "scoresBySchoolSpendingFmtd[\"% Passing Reading\"] = scoresBySchoolSpendingFmtd[\"% Passing Reading\"].map(\"{:.2%}\".format)\n",
     "scoresBySchoolSpendingFmtd[\"% Overall Passing Rate\"] = scoresBySchoolSpendingFmtd[\"% Overall Passing Rate\"].map(\"{:.2%}\".format)\n",
-    "scoresBySchoolSpendingFmtd.head()"
+    "scoresBySchoolSpendingFmtd"
    ]
   },
   {
@@ -1126,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1181,27 +1175,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>Small (&lt;1000)</td>\n",
-       "      <td>83.83</td>\n",
-       "      <td>83.97</td>\n",
-       "      <td>93.95%</td>\n",
-       "      <td>96.04%</td>\n",
-       "      <td>95.00%</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>83.93</td>\n",
+       "      <td>93.55%</td>\n",
+       "      <td>96.10%</td>\n",
+       "      <td>94.82%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Medium (1000-2000)</td>\n",
        "      <td>83.37</td>\n",
-       "      <td>83.87</td>\n",
-       "      <td>93.62%</td>\n",
-       "      <td>96.77%</td>\n",
-       "      <td>95.19%</td>\n",
+       "      <td>83.86</td>\n",
+       "      <td>93.60%</td>\n",
+       "      <td>96.79%</td>\n",
+       "      <td>95.20%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Large (2000-5000)</td>\n",
-       "      <td>77.48</td>\n",
-       "      <td>81.20</td>\n",
-       "      <td>68.65%</td>\n",
-       "      <td>82.13%</td>\n",
-       "      <td>75.39%</td>\n",
+       "      <td>77.75</td>\n",
+       "      <td>81.34</td>\n",
+       "      <td>69.96%</td>\n",
+       "      <td>82.77%</td>\n",
+       "      <td>76.36%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1210,46 +1204,39 @@
       "text/plain": [
        "                       Average Math Score Average Reading Score  \\\n",
        "Binned Per School Size                                            \n",
-       "Small (<1000)                       83.83                 83.97   \n",
-       "Medium (1000-2000)                  83.37                 83.87   \n",
-       "Large (2000-5000)                   77.48                 81.20   \n",
+       "Small (<1000)                       83.82                 83.93   \n",
+       "Medium (1000-2000)                  83.37                 83.86   \n",
+       "Large (2000-5000)                   77.75                 81.34   \n",
        "\n",
        "                       % Passing Math % Passing Reading % Overall Passing Rate  \n",
        "Binned Per School Size                                                          \n",
-       "Small (<1000)                  93.95%            96.04%                 95.00%  \n",
-       "Medium (1000-2000)             93.62%            96.77%                 95.19%  \n",
-       "Large (2000-5000)              68.65%            82.13%                 75.39%  "
+       "Small (<1000)                  93.55%            96.10%                 94.82%  \n",
+       "Medium (1000-2000)             93.60%            96.79%                 95.20%  \n",
+       "Large (2000-5000)              69.96%            82.77%                 76.36%  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "groupedSchools[\"Binned Per School Size\"] = pd.cut(groupedSchools[\"Total Students\"],size_bins, labels=group_names)\n",
-    "perSchoolSize = groupedSchools[\"Binned Per School Size\"]\n",
-    "perSchoolSize = perSchoolSize.reset_index()\n",
-    "\n",
-    "school_data_complete_with_bins_size = pd.merge(school_data_complete_with_bins,perSchoolSize,on=\"school_name\",how=\"left\")\n",
-    "\n",
-    "groupedPerSchoolSize = school_data_complete_with_bins_size.groupby(\"Binned Per School Size\")\n",
-    "\n",
-    "scoresBySchoolSize = pd.DataFrame({\"Average Math Score\":groupedPerSchoolSize[\"math_score\"].sum() / groupedPerSchoolSize[\"math_score\"].count(),\n",
-    "                                       \"Average Reading Score\":groupedPerSchoolSize[\"reading_score\"].sum() / groupedPerSchoolSize[\"reading_score\"].count()\n",
-    "                                       })\n",
-    "\n",
-    "scoresBySchoolSize[\"% Passing Math\"] = groupedPerSchoolSize[\"Passing Math\"].sum() / groupedPerSchoolSize[\"Student ID\"].count()\n",
-    "scoresBySchoolSize[\"% Passing Reading\"] = groupedPerSchoolSize[\"Passing Reading\"].sum() / groupedPerSchoolSize[\"Student ID\"].count()\n",
-    "scoresBySchoolSize[\"% Overall Passing Rate\"] = (scoresBySchoolSize[\"% Passing Math\"] + scoresBySchoolSize[\"% Passing Reading\"]) / 2\n",
-    "\n",
+    "groupedBySizeBins = groupedSchools.groupby(\"Binned Per School Size\")\n",
+    "scoresBySchoolSize = pd.DataFrame({\"Average Math Score\":groupedBySizeBins[\"Average Math Score\"].sum() / groupedBySizeBins[\"Average Math Score\"].count(),\n",
+    "                                     \"Average Reading Score\":groupedBySizeBins[\"Average Reading Score\"].sum() / groupedBySizeBins[\"Average Reading Score\"].count(),\n",
+    "                                     \"% Passing Math\":groupedBySizeBins[\"% Passing Math\"].sum() / groupedBySizeBins[\"% Passing Math\"].count(),\n",
+    "                                     \"% Passing Reading\":groupedBySizeBins[\"% Passing Reading\"].sum() / groupedBySizeBins[\"% Passing Reading\"].count(),\n",
+    "                                     \"% Overall Passing Rate\":groupedBySizeBins[\"% Overall Passing Rate\"].sum() / groupedBySizeBins[\"% Overall Passing Rate\"].count()\n",
+    "                    })\n",
+    "scoresBySchoolSize\n",
     "scoresBySchoolSizeFmtd = scoresBySchoolSize\n",
     "scoresBySchoolSizeFmtd[\"Average Math Score\"] = scoresBySchoolSizeFmtd[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
     "scoresBySchoolSizeFmtd[\"Average Reading Score\"] = scoresBySchoolSizeFmtd[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
     "scoresBySchoolSizeFmtd[\"% Passing Math\"] = scoresBySchoolSizeFmtd[\"% Passing Math\"].map(\"{:.2%}\".format)\n",
     "scoresBySchoolSizeFmtd[\"% Passing Reading\"] = scoresBySchoolSizeFmtd[\"% Passing Reading\"].map(\"{:.2%}\".format)\n",
     "scoresBySchoolSizeFmtd[\"% Overall Passing Rate\"] = scoresBySchoolSizeFmtd[\"% Overall Passing Rate\"].map(\"{:.2%}\".format)\n",
-    "scoresBySchoolSizeFmtd.head()"
+    "scoresBySchoolSizeFmtd"
    ]
   },
   {
@@ -1268,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1340,17 +1327,17 @@
        "District            80.91%                 73.71%  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "groupedPerSchoolType = school_data_complete_with_bins_size.groupby(\"type\")\n",
+    "groupedPerSchoolType = school_data_complete.groupby(\"type\")\n",
     "\n",
     "scoresBySchoolType = pd.DataFrame({\"Average Math Score\":groupedPerSchoolType[\"math_score\"].sum() / groupedPerSchoolType[\"math_score\"].count(),\n",
-    "                                       \"Average Reading Score\":groupedPerSchoolType[\"reading_score\"].sum() / groupedPerSchoolType[\"reading_score\"].count()\n",
-    "                                       })\n",
+    "                                   \"Average Reading Score\":groupedPerSchoolType[\"reading_score\"].sum() / groupedPerSchoolType[\"reading_score\"].count()\n",
+    "                                  })\n",
     "\n",
     "scoresBySchoolType[\"% Passing Math\"] = groupedPerSchoolType[\"Passing Math\"].sum() / groupedPerSchoolType[\"Student ID\"].count()\n",
     "scoresBySchoolType[\"% Passing Reading\"] = groupedPerSchoolType[\"Passing Reading\"].sum() / groupedPerSchoolType[\"Student ID\"].count()\n",
